Update ShizukuInjectorService.java